# loom

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/storage/: manager.rs  mod.rs  models.rs  tests.rs
crates/gui/frontend/: index.html  package.json
crates/gui/frontend/src/: App.tsx  I18nContext.tsx  api.ts  index.css  types.ts  utils.ts
crates/gui/frontend/src/components/: TerminalTab.tsx
crates/gui/frontend/src/pages/: ProjectWorkspace.tsx  ProjectsPage.tsx  SettingsPage.tsx  TemplatesPage.tsx
crates/gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/gui/src-tauri/src/: main.rs  pty.rs
e2e/: package.json
e2e/src/: cli.test.ts  gui.test.ts
specs/014-project-centric-agent-supervisor/: README.md
specs/015-project-data-model-and-storage/: README.md
specs/016-os-process-tracker-and-env-isolation/: README.md
specs/017-project-dashboard-ui-overhaul/: README.md
specs/018-foreground-process-and-kill-fix/: README.md
specs/019-project-centric-workspace-refactor/: README.md
specs/020-project-sidebar-selector/: README.md
specs/021-project-workspace-navigation/: README.md
specs/022-project-execution-binding/: README.md
specs/023-project-list-drag-drop-sorting/: README.md
specs/024-brand-rename-loom/: README.md
