[package]
name = "loom-gui"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
loom-core = { path = "../../core" }
rfd = "0.17.2"
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
